--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+# Ignore generated CSV file
+meta/loc.csv
+
+# Ignore node_modules (dependencies)
+node_modules/
