lab 7 image displaying issue fixed

--- a/lib/projects.json
+++ b/lib/projects.json
@@ -2,7 +2,7 @@
     {
         "title": "Bikewatching",
         "year": "2025", 
-        "image": "/images/lab7_img.jpg",
+        "image": "../images/lab7_img.jpg",
         "description": "dsc106 lab7 "
     },
     {
